delete unused file

--- a/web/src/app/information/information.component.html
+++ b/web/src/app/information/information.component.html
@@ -23,7 +23,7 @@
 <div class="member-group">
   <div class="member" [ngStyle]="{'transform': animation1}" (click)="turnPage(1)">
     <div class="mem-img">
-      <img src="../../assets/img/profile-img.jpg">
+      <img src="../../assets/member/alex.jpg">
     </div>
 
     <div class="mem-info">
