--- a/web/src/app/information/information.component.html
+++ b/web/src/app/information/information.component.html
@@ -9,13 +9,12 @@
 
   <div class="group-info">
     <p>
-      asdfffffffffffffff sdf asdf asd f ad f asdf as df as fda f
-       asdf a sdf ad f asdf
-      ] af               dfdfd asd f asdf
-       asdf as df
-       asdf asdf
-      a sdf asd fa sdf
-       asdf as df asdf
+      We are Alex Xiao, Yizhou Yan, Morgan Chang, Tien Tran, Matthew Sternquist in the same group,
+      and have a passion for computer and technology. We are interesting to work with each other
+      to apply what we learned to this project such as Apache, SQL, Linux, PHP, C++, Python. Each of
+      us knows different kind of languages such as Java, C, C++, Python, PHP, so it is a great idea to
+      form a group to do this project. The aims of this project are to detect faces by using OpenCV, OpenFace,
+      eye tracking, FFMPEG, Frontend, Backend, Pipeline, and Databases.
     </p>
   </div>
 </div>
@@ -58,10 +57,49 @@
 
     <div class="mem-info">
       <div class="name">
-        <a (click)="goto('tien')">Tine</a>
+        <a (click)="goto('tien')">Tine Tran</a>
       </div>
       <div class="info">
-        The most handsome guys in the world!!!
+        I am a senior student at SJSU, and my passion is technology and
+        programming. After graduating electrical engineer and working almost 8 years,
+        I recognized that programming is very interesting, necessary. It can apply to solve
+        many problems in the real life and many industries. Therefore, I decided to come back the University to study it.
+      </div>
+    </div>
+  </div>
+
+  <div class="member" [ngStyle]="{'transform': animation4}" (click)="turnPage(4)">
+    <div class="mem-img">
+      <img src="../../assets/img/profile-img.jpg">
+    </div>
+
+    <div class="mem-info">
+      <div class="name">
+        <a (click)="goto('mor')">Morgan Chang</a>
+      </div>
+      <div class="info">
+        I am a senior student at SJSU, and my passion is technology and
+        programming. After graduating electrical engineer and working almost 8 years,
+        I recognized that programming is very interesting, necessary. It can apply to solve
+        many problems in the real life and many industries. Therefore, I decided to come back the University to study it.
+      </div>
+    </div>
+  </div>
+
+  <div class="member" [ngStyle]="{'transform': animation5}" (click)="turnPage(5)">
+    <div class="mem-img">
+      <img src="../../assets/member/tien.jpg">
+    </div>
+
+    <div class="mem-info">
+      <div class="name">
+        <a (click)="goto('matt')">Matthew Sternquist</a>
+      </div>
+      <div class="info">
+        I am a senior student at SJSU, and my passion is technology and
+        programming. After graduating electrical engineer and working almost 8 years,
+        I recognized that programming is very interesting, necessary. It can apply to solve
+        many problems in the real life and many industries. Therefore, I decided to come back the University to study it.
       </div>
     </div>
   </div>
