--- a/web/src/app/information/information.component.scss
+++ b/web/src/app/information/information.component.scss
@@ -20,10 +20,11 @@
   padding: 10px;
 }
 .group-info {
-  display: inline-table;
+  display: inline-block;
   width: 70%;
   padding: 10px;
   font-size: large;
+  font-style: italic;
 }
 
 .member-group {
@@ -40,9 +41,10 @@
   margin-right: 1.5%;
   margin-left: 1.5%;
   cursor: pointer;
-  height: 350px;
+  height: 300px;
   position: relative;
   background-color: whitesmoke;
+  margin-bottom: 20px;
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   transition: 1s;
@@ -89,10 +91,15 @@ img {
   font-weight: bold;
 }
 
+.info {
+  font-size: medium;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 @media only screen and (max-width: 840px) {
   .member {
     width: 100%;
-    margin-bottom: 20px;
   }
 
   .group-info {
