--- a/web/src/app/information/information.component.html
+++ b/web/src/app/information/information.component.html
@@ -42,10 +42,14 @@
 
     <div class="mem-info">
       <div class="name">
-        <a (click)="goto('yan')">Yanyi Zhou</a>
+        <a (click)="goto('yan')">Yizhou Yan</a>
       </div>
       <div class="info">
-        The most handsome guys in the world!!! safasfd asfd asdf asd fasdf
+        Hi, my name Yizhou Yan, I am currently enrolled in the San Jose State University majoring
+        in computer science. My expected graduation date is December 2017. I am seeking an internship or
+        entry level position that will allow me to utilize my problem solving skills and attention to detail
+        to further develop my abilities in the field of computer science. Resume can be found in my profile and
+        I am willing to learn any skills that are necessary for the job.
       </div>
     </div>
   </div>
@@ -70,7 +74,7 @@
 
   <div class="member" [ngStyle]="{'transform': animation4}" (click)="turnPage(4)">
     <div class="mem-img">
-      <img src="../../assets/img/profile-img.jpg">
+      <img src="../../assets/member/mor.JPG">
     </div>
 
     <div class="mem-info">
@@ -78,17 +82,16 @@
         <a (click)="goto('mor')">Morgan Chang</a>
       </div>
       <div class="info">
-        I am a senior student at SJSU, and my passion is technology and
-        programming. After graduating electrical engineer and working almost 8 years,
-        I recognized that programming is very interesting, necessary. It can apply to solve
-        many problems in the real life and many industries. Therefore, I decided to come back the University to study it.
+        Morgan Chang is a Computer Science undergraduate at San Jose
+        State University. His interests lie in biomedical engineering,
+        bioinformatics, and robotics. When he is not asleep, he likes to eat and take things apart.
       </div>
     </div>
   </div>
 
   <div class="member" [ngStyle]="{'transform': animation5}" (click)="turnPage(5)">
     <div class="mem-img">
-      <img src="../../assets/member/tien.jpg">
+      <img src="../../assets/member/matt.jpg">
     </div>
 
     <div class="mem-info">
@@ -96,10 +99,10 @@
         <a (click)="goto('matt')">Matthew Sternquist</a>
       </div>
       <div class="info">
-        I am a senior student at SJSU, and my passion is technology and
-        programming. After graduating electrical engineer and working almost 8 years,
-        I recognized that programming is very interesting, necessary. It can apply to solve
-        many problems in the real life and many industries. Therefore, I decided to come back the University to study it.
+        Matthew Sternquist studies Computer Science at San Jose State University.
+        He has worked on numerous personal projects, including small scale android applications.
+        His interests include mobile development, computer security, and artificial intelligence.
+        In his spare time he enjoys playing games, hiking, and exploring new places.
       </div>
     </div>
   </div>
