add more info for member

--- a/FinalVersion/web/src/app/information/information.component.html
+++ b/FinalVersion/web/src/app/information/information.component.html
@@ -30,7 +30,12 @@
         <a (click)="goto('xiao')">Alex Xiao</a>
       </div>
       <div class="info">
-        The most handsome guys in the world!!!
+        I am currently working as a frontend
+        developer. I love working with UI and frontend because it is such an achievement
+        to see my hard work turning to a beautiful interface immediately, and I am also motived
+        from how people are enjoyed by the art I created. In addition to my work as a frontend
+        developer, I also enjoy working the backend since it is so tight with frontend.
+
       </div>
     </div>
   </div>
@@ -48,8 +53,7 @@
         Hi, my name Yizhou Yan, I am currently enrolled in the San Jose State University majoring
         in computer science. My expected graduation date is December 2017. I am seeking an internship or
         entry level position that will allow me to utilize my problem solving skills and attention to detail
-        to further develop my abilities in the field of computer science. Resume can be found in my profile and
-        I am willing to learn any skills that are necessary for the job.
+        to further develop my abilities in the field of computer science.
       </div>
     </div>
   </div>
